<resources>
    <string name="app_name">Practica lab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nueva">Nueva Orden</string>
    <string name="editar">Nuevo Plato</string>

    <string name="codigo">Codigo</string>
    <string name="plato">Plato</string>
    <string name="hora">Hora</string>
    <string name="comentario">Comentario</string>
    <string name="locale">Localizacion</string>

    <string name="codigoPlato">Codigo del Plato</string>
    <string name="nombrePlato">nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>


    <string name="title_activity_index">index</string>
    <string name="title_activity_editar">editar</string>
    <string name="title_activity_insertar_plato">insertarPlato</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
