<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pavilion.practicalab.AgregarPlatoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar"

            android:id="@+id/textView2" />


        <EditText
            style="@style/Inputs"
            android:hint="@string/codigoPlato"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCodigoPlato" />

        <EditText
            style="@style/Inputs"
            android:hint="@string/nombrePlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNombrePlata" />
        <EditText
            style="@style/Inputs"
            android:hint="@string/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDescripcion" />
        <EditText
            style="@style/Inputs"
            android:hint="@string/precio"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPrecio" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="guardar"
            android:id="@+id/button" />
    </LinearLayout>

</FrameLayout>
